# evcxr

./: Cargo.nix  README.md  crate-hashes.json  crates-io.list  crates-io.nix  default.nix
.github/workflows/: carnix.yml  crate2nix.yml
evcxr_jupyter/: Cargo.toml
