[package]
name = "evcxr_jupyter"
version = "0.5.0"
license = "Apache-2.0"
description = "An Jupyter Kernel for Rust"
repository = "https://github.com/google/evcxr"
readme = "README.md"
authors = [
    "David Lattimore <dvdlttmr@gmail.com>",
    "David Bernard <david.bernard.31@gmail.com>",
]
edition = "2018"

[dependencies]
"evcxr" = { git = "https://github.com/google/evcxr", rev="f7050ef088b5d9b297c92cd86b087f6ddd527161", sha256 = "0pjk4xnw5icmkzkd870873m4nf7sjmn7sq6v7yd4w3nzgzpwslb4" }
json = "0.11.15"
failure = { version = "0.1.5", default-features = false, features = [ "std" ] }
zmq = { version = "0.9.1", default-features = false }
uuid = { version = "0.7.4", features = [ "v4" ] }
hmac = "0.7.1"
sha2 = "0.8.0"
hex = "0.3.2"
colored = "1.8.0"
dirs = "2.0.2"
chrono = "0.4.7"

[features]
default = ["vendored-zmq"]
vendored-zmq = ["zmq/vendored"]
